--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -23,7 +23,7 @@ services:
           - driver: nvidia
             count: 1
             capabilities: [gpu]
-    # network_mode: host
+    network_mode: bridge
     shm_size: 22g
     ports:
       - "0.0.0.0:17863:7860"
